# deepagents

./: .gitignore  CORS_SETUP_GUIDE.md  Dockerfile  EXTENDED_THINKING_CONFIG.md  FIRECRAWL_EXTRACT_EXAMPLES.md  FIRECRAWL_QUICKSTART.md  OPENAI_SETUP.md  RESILIENCE_WORKING.md  START_PARALLEL_AGENT.md  VERCEL_AI_GATEWAY_SETUP.md  compare_models.py  docker-compose.cors.yml  example_retry_usage.py  find_lock.ps1  handshake_test.py  langgraph.json  langgraph_no_mcp.json  langgraph_server_with_cors.py  mcp_agent_bright_data_only.py  mcp_agent_example.py  mcp_agent_grok.py  mcp_agent_grok_4_1.py  mcp_agent_grok_fast.py  mcp_agent_grok_fast_with_retry.py  mcp_agent_openai.py  mcp_agent_vercel_glm.py  mcp_test.py  nginx-cors.conf  parallel_music_research_agent.py  parallel_orchestra_with_mcp.py  parallel_orchestra_with_mcp_chat.py  parallel_processor_subagent.py  pyproject.toml  reinstall_cli.ps1  render.yaml  requirements.minimal.txt  requirements.txt  restart_langgraph.bat  run_mcp_agent.py  run_simple_agent.py  (+14 more)
.claude/: settings.json
.continue/mcpServers/: new-mcp-server.yaml
_archive/: browserbase_create_session.py  check_model_directly.py  force_restart.ps1  kill_and_start.bat  kill_port_2024.ps1  monitor_downloads.py  run_agent.py  start_cors_server.bat  start_cors_server.ps1  start_server_clean.bat  test_agent_properly.py  test_bright_data.py  test_glm_agent.py  test_grok_agent.py  test_mcp_chrome.py  test_mcp_chrome_detailed.py  test_model_direct.py  test_model_name.py  test_new_agent.py  test_railway_agent.py  test_updated_agent.py  verify_model_via_trace.py
_archive/guides/: CREDIT_PROTECTION_UPDATE.md  FIRECRAWL_SDK_MIGRATION.md  GIT_SUMMARY.md  GROK_INTEGRATION.md  OPENAI_OPTIMIZATION_COMPLETE.md  PARALLEL_AGENTS_GUIDE_HE.md  PARALLEL_CAPABILITY_GUIDE.md  QUICKSTART_VERCEL.md  RETRY_SYSTEM.md
agents/: basic_no_mcp.py  cerebras_brightdata_genius.py  claude_sonnet_agent.py  gemini3_flash_brightdata_genius.py  gemini_pro_agent.py  grok_fast_with_retry.py  mcp_agent_bright_data_glm.py  simple_agent_no_mcp.py
agents/ui/: __init__.py  email_unsubscriber.py  grok_ui_orchestrator.py
agents/zamar/: cerebras_browser_agent.py  cerebras_zamar.py  genius_lyrics_agent.py  glm_cerebras.py  grok_fast_firecrawl_sdk.py
deepagents/: mcp_config.py
docs/: genius-lyrics-scraping-guide.md  railway-deployment-guide.md
temp/: peer-tasi-derech-hashalom-lyrics.txt
